Fixed padding spacing on datetime picker.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,7 +146,7 @@ input.ng-invalid {
 
 .staticDateTime {
   margin: auto;
-  padding: 1em 0;
+  padding: 1em 0 2em 0;
   max-width: 50em; }
 
 .add-player-status {
