--- a/scss/datePicker.scss
+++ b/scss/datePicker.scss
@@ -12,6 +12,6 @@
 
 .staticDateTime {
 	margin: auto;
-	padding: 1em 0;
+	padding: 1em 0 2em 0;
 	max-width: 50em;
 }
